[project]
name = "pygame_tiled_example"
version = "0.1.0"
authors = [{ name = "Your Name", email = "you@example.com" }]
description = "Pygame Tiled Map Prototype"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "lxml>=6.0.0",
    "pygame >=2.1.2",
    "pygame-gui>=0.6.14",
    "pytmx >=1.4.0",
]

[project.scripts]
map_renderer = "map_renderer:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]                                                                           
packages = ["llmrpg", "sprites"]  # Explicitly list packages                                

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
